ERROR en Imagen secundaria

--- a/quienes.html
+++ b/quienes.html
@@ -45,7 +45,7 @@
 </div>
 <br>
 <div>
-    <img src="imagenes/imagen-xx0.jpg" alt="uñas" title="uñas">
+    <img src="Imagenes/imagen-xx0.jpg" alt="uñas" title="uñas">
 </div>
     
 </body>
